# cookiecutter-stylus

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: Cargo.toml
{{ cookiecutter.project_name }}/src/: lib.rs  main.rs
{{ cookiecutter.project_name_underscored }}/: Cargo.toml
{{ cookiecutter.project_name_underscored }}/src/: main.rs
{{ cookiecutter.project_name_underscored }}/tests/: {{ cookiecutter.project_name_underscored }}_integration_test.rs
