[package]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = "1.0"
alloy-sol-types = "1.0"
{% if cookiecutter.sdk_example %}
stylus-sdk = { path = "../../stylus-sdk" }
{% else %}
stylus-sdk = { git = "https://github.com/OffchainLabs/stylus-sdk-rs.git", branch = "main" }
{% endif %}

[dev-dependencies]
alloy = { version = "1.0", features = ["contract", "signer-local", "rpc-types", "sha3-keccak"] }
eyre = "0.6"
tokio = "1.44"
{% if cookiecutter.sdk_example %}
stylus-sdk = { path = "../../stylus-sdk", features = ["stylus-test"] }
stylus-tools = { path = "../../stylus-tools" }
{% else %}
stylus-sdk = { git = "https://github.com/OffchainLabs/stylus-sdk-rs.git", branch = "main", features = ["stylus-test"] }
stylus-tools = { git = "https://github.com/OffchainLabs/stylus-sdk-rs.git", branch = "main" }
{% endif %}

[features]
export-abi = ["stylus-sdk/export-abi"]
integration-tests = ["stylus-tools/integration-tests"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
